--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://twitter.com/lovishdtwts">Your Name Here</a>.
+      >. Coded by <a href="https://twitter.com/lovishdtwts">Lovish Duggal</a>.
     </div>
   </body>
 </html>
