--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
       .container .btn .btn2 a:hover {
         color: black;
       }
-      .attribution {
+     .container .attribution {
         font-size: 11px;
         text-align: center;
         margin: -195px auto;
       }
-      .attribution a {
+      .container  .attribution a {
         color: hsl(228, 45%, 44%);
       }
     </style>
@@ -203,12 +203,13 @@
         <div class="btn1"><a href="">Proceed to Payment</a></div>
         <div class="btn2"><a href=""> Cancel Order</a></div>
       </footer>
-    </main>
-    <div class="attribution">
+       <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://twitter.com/lovishdtwts">Lovish Duggal</a>.
     </div>
+    </main>
+   
   </body>
 </html>
